fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -587,18 +587,18 @@ video {
   margin: auto;
 }
 
-.m-2 {
-  margin: 0.5rem;
-}
-
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
+.m-6 {
+  margin: 1.5rem;
 }
 
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 .my-6 {
@@ -609,6 +609,11 @@ video {
 .my-12 {
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mt-10 {
@@ -631,20 +636,20 @@ video {
   margin-top: 4rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
 .mr-2 {
   margin-right: 0.5rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .block {
@@ -655,16 +660,16 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
 
 .h-auto {
   height: auto;
-}
-
-.h-16 {
-  height: 4rem;
 }
 
 .h-12 {
@@ -687,16 +692,20 @@ video {
   width: 80%;
 }
 
-.w-96 {
-  width: 24rem;
-}
-
 .w-32 {
   width: 8rem;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
 .grow {
   flex-grow: 1;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -719,6 +728,10 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-end {
   justify-content: flex-end;
 }
@@ -729,6 +742,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .space-x-12 > :not([hidden]) ~ :not([hidden]) {
@@ -747,16 +764,16 @@ video {
   align-self: flex-end;
 }
 
-.whitespace-nowrap {
-  white-space: nowrap;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .border-solid {
@@ -782,10 +799,6 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -802,14 +815,10 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-darkBlue {
-  --tw-gradient-to: rgb(51 187 207 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #33BBCF, var(--tw-gradient-to);
-}
-
-.via-lightBlue {
-  --tw-gradient-to: rgb(222 249 250 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #DEF9FA, var(--tw-gradient-to);
+.from-lightGray {
+  --tw-gradient-from: #11101D;
+  --tw-gradient-to: rgb(17 16 29 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .to-lightGray {
@@ -818,6 +827,10 @@ video {
 
 .to-lightBlue {
   --tw-gradient-to: #DEF9FA;
+}
+
+.to-darkGray {
+  --tw-gradient-to: #272727;
 }
 
 .bg-clip-text {
@@ -838,9 +851,9 @@ video {
   padding-bottom: 2rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pt-2 {
@@ -870,19 +883,9 @@ video {
   line-height: 1.75rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .text-base {
@@ -890,14 +893,14 @@ video {
   line-height: 1.5rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -963,6 +966,11 @@ video {
     transition: all 0.5s;
   }
 
+  .hamburger-top{
+    width: 20px;
+    left: 10px;
+  }
+
   .hamburger-middle {
     transform: translateY(10px);
   }
@@ -977,7 +985,8 @@ video {
   }
 
   .open .hamburger-top {
-    transform: rotate(45deg) translateY(6px) translate(6px);
+    width: 30px;
+    transform: rotate(45deg) translateY(12px) translate(6px);
   }
 
   .open .hamburger-middle {
@@ -985,7 +994,7 @@ video {
   }
 
   .open .hamburger-bottom {
-    transform: rotate(-45deg) translateY(6px) translate(-6px);
+    transform: rotate(-45deg) translateY(12px) translate(-6px);
   }
 }
 
@@ -1007,28 +1016,21 @@ video {
     width: 50%;
   }
 
+  .sm\:w-20 {
+    width: 5rem;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
   .sm\:self-center {
     align-self: center;
-  }
-
-  .sm\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .sm\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
   }
 
   .sm\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-  }
-
-  .sm\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 
   .sm\:text-4xl {
@@ -1040,13 +1042,13 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-
-  .sm\:font-bold {
-    font-weight: 700;
-  }
 }
 
 @media (min-width: 768px) {
+  .md\:m-auto {
+    margin: auto;
+  }
+
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1080,14 +1082,6 @@ video {
     width: 20rem;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
-  .md\:w-1 {
-    width: 0.25rem;
-  }
-
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1100,32 +1094,36 @@ video {
     width: 60%;
   }
 
-  .md\:w-1\/5 {
-    width: 20%;
-  }
-
-  .md\:w-5 {
-    width: 1.25rem;
-  }
-
   .md\:w-2\/5 {
     width: 40%;
   }
 
-  .md\:w-2 {
-    width: 0.5rem;
+  .md\:w-28 {
+    width: 7rem;
   }
 
-  .md\:w-9 {
-    width: 2.25rem;
+  .md\:w-60 {
+    width: 15rem;
   }
 
-  .md\:w-96 {
-    width: 24rem;
+  .md\:w-2\/4 {
+    width: 50%;
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-evenly {
+    justify-content: space-evenly;
   }
 
   .md\:border-2 {
@@ -1138,11 +1136,6 @@ video {
 
   .md\:p-3 {
     padding: 0.75rem;
-  }
-
-  .md\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
   }
 
   .md\:pl-20 {
@@ -1163,24 +1156,9 @@ video {
     line-height: 2rem;
   }
 
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .md\:text-4xl {
@@ -1190,6 +1168,11 @@ video {
 
   .md\:text-lg {
     font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 
@@ -1204,14 +1187,8 @@ video {
 }
 
 @media (min-width: 976px) {
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .lg\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .lg\:w-auto {
+    width: auto;
   }
 
   .lg\:text-3xl {
@@ -1230,14 +1207,14 @@ video {
     top: -1.5rem;
   }
 
-  .xl\:my-0 {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
   .xl\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
+  }
+
+  .xl\:mx-32 {
+    margin-left: 8rem;
+    margin-right: 8rem;
   }
 
   .xl\:mt-28 {
@@ -1260,6 +1237,10 @@ video {
     width: auto;
   }
 
+  .xl\:gap-6 {
+    gap: 1.5rem;
+  }
+
   .xl\:border-4 {
     border-width: 4px;
   }
@@ -1268,8 +1249,8 @@ video {
     padding: 1.5rem;
   }
 
-  .xl\:p-32 {
-    padding: 8rem;
+  .xl\:p-20 {
+    padding: 5rem;
   }
 
   .xl\:px-32 {
@@ -1310,14 +1291,14 @@ video {
     line-height: 2rem;
   }
 
-  .xl\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .xl\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .xl\:leading-normal {
