--- a/input.css
+++ b/input.css
@@ -27,11 +27,16 @@
     transform: rotate(0);
     transition: all 0.5s;
   }
+  .hamburger-top{
+    width: 20px;
+    left: 10px;
+  }
 
   .hamburger-middle {
     transform: translateY(10px);
   }
   .hamburger-bottom {
+    
     transform: translateY(20px);
   }
   .open {
@@ -39,13 +44,14 @@
     transform: translateY(0px);
   }
   .open .hamburger-top {
-    transform: rotate(45deg) translateY(6px) translate(6px);
+    width: 30px;
+    transform: rotate(45deg) translateY(12px) translate(6px);
   }
   .open .hamburger-middle {
     display: none;
   }
   .open .hamburger-bottom {
-    transform: rotate(-45deg) translateY(6px) translate(-6px);
+    transform: rotate(-45deg) translateY(12px) translate(-6px);
   } 
  
  
